--- a/music/templates/musician_details.html
+++ b/music/templates/musician_details.html
@@ -5,7 +5,7 @@
     <li>{{ musician.birth_date }}</li>
     {% for album in albums %}
         <li>
-            <a href="/album/{{album.id }}">{{ album.title }}</a>
+            <a href="/album/{{album.id }}">{{ album.name }}</a>
         </li>
     {% endfor %}
 </ul>
